--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^0.8.8
+  image_picker: ^0.8.3
+  permission_handler: ^10.3.0
     
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
 
 dev_dependencies:
   flutter_test:
