--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.3
   permission_handler: ^10.3.0
+  flutter_flushbar: ^0.0.2
     
 
 
@@ -67,6 +68,7 @@ flutter:
   assets:
       - assets/PaymentPNGs/
       - assets/AccountProfile/
+      - assets/FAQs/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
