--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
       - assets/AccountProfile/
       - assets/FAQs/
       - assets/Staff Images/
+      - assets/SignUp/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
