--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   showcaseview: ^2.0.3
+  syncfusion_flutter_charts: ^22.1.39
+  graphview: ^1.2.0
  
   
 
