--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_picker: ^0.8.3
   permission_handler: ^10.3.0
   flutter_flushbar: ^0.0.2
+  dotted_border: ^2.0.0+3
     
 
 
