--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
   flutter_flushbar: ^0.0.2
   dotted_border: ^2.0.0+3
   file_picker: ^5.5.0
-  riverpod: ^2.4.0
+  riverpod: ^2.4.3
   flutter_treeview: ^1.0.7+1
   flutter_custom_clippers: ^2.1.0
   photo_view: ^0.14.0
+  
 
     
 
@@ -50,6 +51,7 @@ dependencies:
   syncfusion_flutter_charts: ^22.1.39
   graphview: ^1.2.0
   get: ^4.6.6
+  flutter_riverpod: ^2.4.3
 
   
  
