--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_custom_clippers: ^2.1.0
   photo_view: ^0.14.0
   google_fonts: ^5.1.0
+  carousel_slider: ^4.2.1
+  flutter_swiper: ^1.1.6
   
 
     
@@ -100,6 +102,8 @@ flutter:
     - assets/avatars/80px/
     - assets/avatars/120px/
     - assets/graphic/
+    - assets/ads/
+    - assets/Marketplace/
     - assets/icons/frame/24px/20_Clear_form.png
       
   #   - images/a_dot_ham.jpeg
