--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^5.1.0
   carousel_slider: ^4.2.1
   flutter_rating_bar: ^4.0.1
+  dropdown_search: ^5.0.6
 
 
 
@@ -58,6 +59,7 @@ dependencies:
   graphview: ^1.2.0
   get: ^4.6.6
   flutter_riverpod: ^2.4.3
+  flutter_dropdown_search: ^0.0.4
 
   
  
