--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   flutter_riverpod: ^2.4.3
   flutter_dropdown_search: ^0.0.4
   super_banners: ^0.0.1
+  font_awesome_flutter: ^10.7.0
 
   
  
