--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/PaymentPNGs/
+    - assets/Marketplace/BrandsLogos
     - assets/AccountProfile/
     - assets/FAQs/
     - assets/Staff Images/
